plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'//    id 'org.jetbrains.kotlin.jvm' version '1.6.0-RC'
//    id 'org.sqlite'
}

group 'com.scholarly.utme'
version '1.0-SNAPSHOT'



repositories {
    mavenCentral()
    google()

    maven {
        url "https://sandec.jfrog.io/artifactory/repo"
    }
}

ext {
    junitVersion = '5.9.2'
}

sourceCompatibility = '16'
targetCompatibility = '16'

//sourceSets {
//    create("intTest") {
//        compileClasspath += sourceSets.main.get().output
//        runtimeClasspath += sourceSets.main.get().output
//    }
//}
//
//val intTestImplementation by configurations.getting {
//    extendsFrom(configurations.implementation.get())
//}
//
//configurations["intTestRuntimeOnly"].extendsFrom(configurations.runtimeOnly.get())
//
//tasks.register("intTestJar", Jar.class) {
//    from(sourceSets["intTest"].output)
//}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'com.scholarly.utme'
    mainClass = 'com.scholarly.utme.HelloApplication'
}

javafx {
    version = '18.0.2'
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.web']
}

dependencies {
    implementation('org.controlsfx:controlsfx:11.1.2') {
        exclude group: 'org.openjfx'
    }
    implementation('com.dlsc.formsfx:formsfx-core:11.6.0') {
        exclude group: 'org.openjfx'
    }
    implementation('net.synedra:validatorfx:0.4.0') {
        exclude(group: 'org.openjfx')
    }
    implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1') {
        exclude group: 'org.openjfx'
    }
    implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0') {
        exclude group: 'org.openjfx'
    }
    implementation ('com.jidesoft:jidefx-fields:0.9.1-b128') {
        exclude group: 'org.openjfx'
    }
    /*implementation('eu.hansolo:tilesfx:16.0.3') {
        exclude group: 'org.openjfx'
    }*/

    implementation('org.xerial:sqlite-jdbc:3.36.0.2') {
        exclude group: 'org.sqlite'
    }

    // SQL connector
//    implementation 'io.github.willena:sqlite-jdbc:3.35.5.3'

    // RxJava
    implementation 'io.reactivex.rxjava3:rxjava:3.1.6'

    //RxJavaFx
    implementation 'org.pdfsam.rxjava3:rxjavafx:3.0.2'

    // mvvmfx
    implementation 'de.saxsys:mvvmfx:1.8.0'

    // Text-to-Speech
    implementation 'net.sf.sociaal:freetts:1.2.2'

    // Gson
    implementation 'com.google.code.gson:gson:2.10.1'

    // Common Collections by Apache
    implementation 'org.apache.commons:commons-collections4:4.4'

    // Apache Commons Lang
    implementation 'org.apache.commons:commons-lang3:3.12.0'

    // OKHttp
    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'

    // Unirest
    implementation 'com.mashape.unirest:unirest-java:1.3.1'

    // Jackson
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'

    // Markdown
    implementation 'org.commonmark:commonmark:0.19.0'

    // HTML to Text
    implementation 'org.jsoup:jsoup:1.15.4'

    // Katex
//    implementation 'io.github.katexjava:katex-java:0.5.0'
    implementation 'org.codehaus.mojo:latex-maven-plugin:1.1'
//    implementation 'com.github.mikaelstaldal:jlatexmath:1.0.10'
//    implementation 'org.scilab.forge:texworks-core:1.0'
    implementation 'org.scilab.forge:jlatexmath:1.0.7'
//    implementation 'com.googlecode.jlatexmath:jlatexmath:1.0.7'
    implementation 'com.nfbsoftware:latex-converter:1.0.1'

    implementation "com.sandec:mdfx:0.2.12"

    // implementation 'org.xerial:sqlite-jdbc:3.36.0.1'

    // Webcam Library
    implementation 'com.github.sarxos:webcam-capture:0.3.12'


    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
//    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"

}

test {
    useJUnitPlatform()
}

//compileKotlin {
//    kotlinOptions {
//        jvmTarget = "1.8"
//    }
//}
//compileTestKotlin {
//    kotlinOptions {
//        jvmTarget = "1.8"
//    }
//}